⚒  update getuser and routes
